--- a/templates/list_tpl.html
+++ b/templates/list_tpl.html
@@ -10,7 +10,11 @@
 <ul>
 {% for item in items %}
     <li>
-        {{ item.description }} - Priority: {{ item.priority }} 
+        {{ item.description }} - Priority: {{ item.priority }}
+        <form method="GET" action="{{ url_for('update', i=item.id)}}">
+           {{ form.hidden_tag() }}
+             {{ form.submit() }}
+       </form>
     </li>
 {% endfor %}
 </ul>
