--- a/templates/all_lists.html
+++ b/templates/all_lists.html
@@ -15,9 +15,10 @@ There are no TODO lists to show.
 {% for l in todo_lists %}
     <li>
         <a href="{{ url_for('one_list',ident=l.id)}}">{{ l.title }}</a>
-        <form method="POST" action="{{ url_for('delete',lst=l.id)}}">
-      	   {{ form.hidden_tag() }}
-             {{ form.submit() }}
+      </li>
+        <form method="POST" action="/delete/{{ l.title }}">
+        	{{ form.hidden_tag() }}
+        	{{ form.submit() }}
        </form>
     </li>
 {% endfor %}
